Add back support for Java 8